# barf_client

./: .gitignore  README.md  pyproject.toml
.markdown/: i2c-tab-plan.md
backend/src/host_backend/: __init__.py  i2c_reader.py  my_agents.py  my_servers.py  my_tools.py  openai_streamer.py  server.py  tool_messages.py  uart_reader.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json  tsconfig.preload.json
frontend/electron/: main.ts  preload.ts  prompt.html  splash.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentChat.tsx  Console.tsx  I2CTerminal.tsx  TerminalTabs.tsx  ThinkingIndicator.tsx  UARTTerminal.tsx
frontend/src/types/: electron.d.ts
frontend/src/utils/: backend.ts
